syntax = 'proto3';

option java_multiple_files = true;
option java_package = "cn.cleanarch.gw.tool.grpc";

import "Member.proto";

service MemberService {
  rpc getList(MemberRequest) returns (MemberResponse) {};
}

message MemberRequest {
  int32 page = 1;
  int32 page_size = 10;
}

message MemberResponse {
  repeated Member member = 1;
}